# monorepo

./: .gitmodules  README.md
modules/: Cargo.toml
modules/scratchpad/: Cargo.toml
modules/scratchpad/src/: main.rs
