[workspace]
resolver = "3"
members = [ "client/resolution_client_utils", "resolution-common","resolution-server", "scratchpad"]

[workspace.dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.98"
base64 = "0.22.1"
crc = "3.3.0"
iroh = "0.35.0"
oqs = "0.11.0"
resolution-common = { path = "resolution-common" }
rmp = "0.8.14"
rmp-serde = "1.3.0"
serde = "1.0.219"
serde_bytes = "0.11.17"
serde_json = "1.0.140"
serde_with = "3.12.0"
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = "1.45.1"
uuid = "1.17.0"
